src/codegen/tests/snapshots/rusty__codegen__tests__code_gen_tests__enum_members_can_be_used_in_asignments.snap
---
source: src/codegen/tests/code_gen_tests.rs
expression: result
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

%main = type { i32 }

@main_instance = global %main zeroinitializer
@MyEnum.red = unnamed_addr constant i32 0
@MyEnum.yellow = unnamed_addr constant i32 1
@MyEnum.green = unnamed_addr constant i32 2

define void @main(%main* %0) {
entry:
  %color = getelementptr inbounds %main, %main* %0, i32 0, i32 0
  store i32 0, i32* %color, align [filtered]
  store i32 1, i32* %color, align [filtered]
  store i32 2, i32* %color, align [filtered]
  ret void
}
