src/codegen/tests/snapshots/rusty__codegen__tests__code_gen_tests__enums_custom_type_are_generated.snap
---
source: src/codegen/tests/code_gen_tests.rs
expression: result
---
; ModuleID = 'main'
source_filename = "main"

%main = type { i32 }

@main_instance = global %main zeroinitializer
@TrafficLight.White = unnamed_addr constant i32 0
@TrafficLight.Red = unnamed_addr constant i32 1
@TrafficLight.Yellow = unnamed_addr constant i32 2
@TrafficLight.Green = unnamed_addr constant i32 3

define void @main(%main* %0) {
entry:
  %tf1 = getelementptr inbounds %main, %main* %0, i32 0, i32 0
  ret void
}
