src/codegen/tests/snapshots/rusty__codegen__tests__code_gen_tests__external_function_called_in_program.snap
---
source: src/codegen/tests/code_gen_tests.rs
expression: result
---
; ModuleID = 'main'
source_filename = "main"

%prg = type {}

@prg_instance = global %prg zeroinitializer

declare i32 @foo()

define void @prg(%prg* %0) {
entry:
  %call = call i32 @foo()
  ret void
}

