src/codegen/tests/snapshots/rusty__codegen__tests__code_gen_tests__fb_method_with_var_in_out.snap
---
source: src/codegen/tests/code_gen_tests.rs
expression: prg
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

%MyClass = type { i16, i16 }
%prg = type { %MyClass, i16 }

@__MyClass__init = unnamed_addr constant %MyClass zeroinitializer
@prg_instance = global %prg zeroinitializer

define void @MyClass(%MyClass* %0) {
entry:
  %this = alloca %MyClass*, align [filtered]
  store %MyClass* %0, %MyClass** %this, align [filtered]
  %x = getelementptr inbounds %MyClass, %MyClass* %0, i32 0, i32 0
  %y = getelementptr inbounds %MyClass, %MyClass* %0, i32 0, i32 1
  ret void
}

define void @MyClass__testMethod(%MyClass* %0, i16* %1) {
entry:
  %this = alloca %MyClass*, align [filtered]
  store %MyClass* %0, %MyClass** %this, align [filtered]
  %x = getelementptr inbounds %MyClass, %MyClass* %0, i32 0, i32 0
  %y = getelementptr inbounds %MyClass, %MyClass* %0, i32 0, i32 1
  %myMethodArg = alloca i16*, align [filtered]
  store i16* %1, i16** %myMethodArg, align [filtered]
  %deref = load i16*, i16** %myMethodArg, align [filtered]
  %load_x = load i16, i16* %x, align [filtered]
  store i16 %load_x, i16* %deref, align [filtered]
  ret void
}

define void @prg(%prg* %0) {
entry:
  %cl = getelementptr inbounds %prg, %prg* %0, i32 0, i32 0
  %x = getelementptr inbounds %prg, %prg* %0, i32 0, i32 1
  call void @MyClass__testMethod(%MyClass* %cl, i16* %x)
  ret void
}
