src/codegen/tests/snapshots/rusty__codegen__tests__code_gen_tests__fb_method_with_var_input_defaults.snap
---
source: src/codegen/tests/code_gen_tests.rs
expression: prg
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

%prg = type { %MyClass }
%MyClass = type { i16, i16 }

@prg_instance = global %prg zeroinitializer

define void @MyClass(ptr %0) {
entry:
  %this = alloca ptr, align [filtered]
  store ptr %0, ptr %this, align [filtered]
  %x = getelementptr inbounds nuw %MyClass, ptr %0, i32 0, i32 0
  %y = getelementptr inbounds nuw %MyClass, ptr %0, i32 0, i32 1
  ret void
}

define void @MyClass__testMethod(ptr %0, i16 signext %1) {
entry:
  %this = alloca ptr, align [filtered]
  store ptr %0, ptr %this, align [filtered]
  %x = getelementptr inbounds nuw %MyClass, ptr %0, i32 0, i32 0
  %y = getelementptr inbounds nuw %MyClass, ptr %0, i32 0, i32 1
  %myMethodArg = alloca i16, align [filtered]
  store i16 %1, ptr %myMethodArg, align [filtered]
  %load_myMethodArg = load i16, ptr %myMethodArg, align [filtered]
  store i16 %load_myMethodArg, ptr %x, align [filtered]
  ret void
}

define void @prg(ptr %0) {
entry:
  %cl = getelementptr inbounds nuw %prg, ptr %0, i32 0, i32 0
  call void @MyClass__testMethod(ptr %cl, i16 signext 3)
  ret void
}
